--- a/src/components/HeadlineCard/HeadlineCard.css
+++ b/src/components/HeadlineCard/HeadlineCard.css
@@ -25,6 +25,7 @@
 				  1px 1px 0 white,
 				 1px -1px 0 white,
 				-1px -1px 0 white;
+    transition: .5s;
 }
 .cardHeadlineHeader h1:nth-child(even) {
     color: rgba(0, 0, 0, 1);
@@ -32,6 +33,7 @@
 				  1px 1px 0 white,
 				 1px -1px 0 white,
 				-1px -1px 0 white;
+    transition: .5s;
 }
 .card-body q.cardHeadlineQuote {
     font-size: 1.3rem;
@@ -45,5 +47,17 @@
 @media screen and (max-width: 799px) {
     .card.cardHeadlineBase {
       min-width: 100%;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .cardHeadlineHeader h1{
+        font-size: 2.5rem;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .cardHeadlineHeader h1{
+        font-size: 2rem;
     }
 }
